# BlogControl

./: README.md  URDF  Untitled Diagram.drawio
Codigo Control num2/ros1/src/myworkcell_core/: CMakeLists.txt  package.xml
Codigo Control num2/ros1/src/myworkcell_core/src/: myworkcell_node.cpp  vision_node.cpp
Codigo Control num2/ros1/src/myworkcell_core/srv/: LocalizePart.srv
Codigo Control num2/ros1/src/myworkcell_support/: CMakeLists.txt  package.xml
Codigo Control num2/ros1/src/myworkcell_support/launch/: workcell.launch
Codigo Control/ros/src/myworkcell_core/: CMakeLists.txt  package.xml
Codigo Control/ros/src/myworkcell_core/src/: vision_node.cpp
Robotica Industrial en tu PC/: Codigo 1  Codigo 2.md  Codigo 3  Codigo 4.md  Codigo 5.md  codigo 6
