<?xml version="1.0"?>
<package format="2">
  <name>myworkcell_support</name>
  <version>0.0.0</version>
  <description>The myworkcell_support package</description>

  <maintainer email="ros-industrial@todo.todo">ros-industrial</maintainer>


  <license>BSD</license>


 


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>myworkcell_core</build_depend>
  <build_export_depend>myworkcell_core</build_export_depend>
  <exec_depend>myworkcell_core</exec_depend>




  </export>
</package>
